pagina bienvenida estilizada

--- a/src/app/components/home_web/bodyweb/bodyweb.component.html
+++ b/src/app/components/home_web/bodyweb/bodyweb.component.html
@@ -21,7 +21,7 @@
                                     <div class="row">
                                         <div class="col-4">
                                             <div class="card" style="width: 18rem;">
-                                                <img class="card-img-top" src="http://www.hotelgloria.com.bo/imagenes/image-restaurant3.jpg" alt="Card image cap" width="300px" height="220px">
+                                                <a href="#"> <img class="card-img-top" src="http://www.hotelgloria.com.bo/imagenes/image-restaurant3.jpg" alt="Card image cap" width="300px" height="220px"></a>
                                                 <div class="card-body">
                                                     <p>
                                                         <a href="#">
@@ -34,7 +34,7 @@
                                         </div>
                                         <div class="col-4">
                                             <div class="card" style="width: 18rem;">
-                                                <img class="card-img-top" src="https://www.boliviaentusmanos.com/amarillas1/businesscard/imagenes/respanol1.jpg" alt="Card image cap" width="300px" height="220px">
+                                                <a href="#"> <img class="card-img-top" src="https://www.boliviaentusmanos.com/amarillas1/businesscard/imagenes/respanol1.jpg" alt="Card image cap" width="300px" height="220px"></a>
                                                 <div class=" card-body ">
                                                     <p>
                                                         <a href="# ">
@@ -47,7 +47,7 @@
                                         </div>
                                         <div class="col-4 ">
                                             <div class="card " style="width: 18rem; ">
-                                                <img class="card-img-top " src="https://media-cdn.tripadvisor.com/media/photo-s/11/66/2c/74/fra-interioret.jpg " alt="Card image cap ">
+                                                <a href="#"> <img class="card-img-top " src="https://media-cdn.tripadvisor.com/media/photo-s/11/66/2c/74/fra-interioret.jpg " alt="Card image cap "></a>
                                                 <div class="card-body ">
                                                     <p>
                                                         <a href="# ">
@@ -66,7 +66,7 @@
                                     <div class="row">
                                         <div class="col-4">
                                             <div class="card" style="width: 18rem;">
-                                                <img class="card-img-top" src="http://www.hotelgloria.com.bo/imagenes/image-restaurant3.jpg" alt="Card image cap" width="300px" height="220px">
+                                                <a href="#"> <img class="card-img-top" src="http://www.hotelgloria.com.bo/imagenes/image-restaurant3.jpg" alt="Card image cap" width="300px" height="220px"></a>
                                                 <div class="card-body">
                                                     <p>
                                                         <a href="#">
@@ -79,7 +79,7 @@
                                         </div>
                                         <div class="col-4">
                                             <div class="card" style="width: 18rem;">
-                                                <img class="card-img-top" src="https://www.boliviaentusmanos.com/amarillas1/businesscard/imagenes/respanol1.jpg" alt="Card image cap" width="300px" height="220px">
+                                                <a href="#"> <img class="card-img-top" src="https://www.boliviaentusmanos.com/amarillas1/businesscard/imagenes/respanol1.jpg" alt="Card image cap" width="300px" height="220px"></a>
                                                 <div class=" card-body ">
                                                     <p>
                                                         <a href="# ">
@@ -92,7 +92,7 @@
                                         </div>
                                         <div class="col-4 ">
                                             <div class="card " style="width: 18rem; ">
-                                                <img class="card-img-top " src="https://media-cdn.tripadvisor.com/media/photo-s/11/66/2c/74/fra-interioret.jpg " alt="Card image cap ">
+                                                <a href="#"> <img class="card-img-top " src="https://media-cdn.tripadvisor.com/media/photo-s/11/66/2c/74/fra-interioret.jpg " alt="Card image cap "></a>
                                                 <div class="card-body ">
                                                     <p>
                                                         <a href="# ">
@@ -135,7 +135,7 @@
                                     <div class="row">
                                         <div class="col-4">
                                             <div class="card" style="width: 18rem;">
-                                                <img class="card-img-top" src="http://www.hotelgloria.com.bo/imagenes/image-restaurant3.jpg" alt="Card image cap" width="300px" height="220px">
+                                                <a href="#"> <img class="card-img-top" src="http://www.hotelgloria.com.bo/imagenes/image-restaurant3.jpg" alt="Card image cap" width="300px" height="220px"></a>
                                                 <div class="card-body">
                                                     <p>
                                                         <a href="#">
@@ -148,7 +148,7 @@
                                         </div>
                                         <div class="col-4">
                                             <div class="card" style="width: 18rem;">
-                                                <img class="card-img-top" src="https://www.boliviaentusmanos.com/amarillas1/businesscard/imagenes/respanol1.jpg" alt="Card image cap" width="300px" height="220px">
+                                                <a href="#"> <img class="card-img-top" src="https://www.boliviaentusmanos.com/amarillas1/businesscard/imagenes/respanol1.jpg" alt="Card image cap" width="300px" height="220px"></a>
                                                 <div class=" card-body ">
                                                     <p>
                                                         <a href="# ">
@@ -161,7 +161,7 @@
                                         </div>
                                         <div class="col-4 ">
                                             <div class="card " style="width: 18rem; ">
-                                                <img class="card-img-top " src="https://media-cdn.tripadvisor.com/media/photo-s/11/66/2c/74/fra-interioret.jpg " alt="Card image cap ">
+                                                <a href="#"> <img class="card-img-top " src="https://media-cdn.tripadvisor.com/media/photo-s/11/66/2c/74/fra-interioret.jpg " alt="Card image cap "></a>
                                                 <div class="card-body ">
                                                     <p>
                                                         <a href="# ">
@@ -174,13 +174,15 @@
                                         </div>
                                     </div>
                                 </div>
+
+
                             </div>
                             <div class="carousel-item">
                                 <div class="container">
                                     <div class="row">
                                         <div class="col-4">
                                             <div class="card" style="width: 18rem;">
-                                                <img class="card-img-top" src="http://www.hotelgloria.com.bo/imagenes/image-restaurant3.jpg" alt="Card image cap" width="300px" height="220px">
+                                                <a href="#"> <img class="card-img-top" src="http://www.hotelgloria.com.bo/imagenes/image-restaurant3.jpg" alt="Card image cap" width="300px" height="220px"></a>
                                                 <div class="card-body">
                                                     <p>
                                                         <a href="#">
@@ -193,7 +195,7 @@
                                         </div>
                                         <div class="col-4">
                                             <div class="card" style="width: 18rem;">
-                                                <img class="card-img-top" src="https://www.boliviaentusmanos.com/amarillas1/businesscard/imagenes/respanol1.jpg" alt="Card image cap" width="300px" height="220px">
+                                                <a href="#"> <img class="card-img-top" src="https://www.boliviaentusmanos.com/amarillas1/businesscard/imagenes/respanol1.jpg" alt="Card image cap" width="300px" height="220px"></a>
                                                 <div class=" card-body ">
                                                     <p>
                                                         <a href="# ">
@@ -206,7 +208,7 @@
                                         </div>
                                         <div class="col-4 ">
                                             <div class="card " style="width: 18rem; ">
-                                                <img class="card-img-top " src="https://media-cdn.tripadvisor.com/media/photo-s/11/66/2c/74/fra-interioret.jpg " alt="Card image cap ">
+                                                <a href="#"> <img class="card-img-top " src="https://media-cdn.tripadvisor.com/media/photo-s/11/66/2c/74/fra-interioret.jpg " alt="Card image cap "></a>
                                                 <div class="card-body ">
                                                     <p>
                                                         <a href="# ">
@@ -219,6 +221,8 @@
                                         </div>
                                     </div>
                                 </div>
+
+
                             </div>
 
                         </div>
@@ -234,10 +238,8 @@
                 </div>
             </div>
         </div>
-        <!-- </div> -->
         <div class="col-2 ">
             <app-promotions></app-promotions>
-
         </div>
     </div>
 </div>
