--- a/src/app/components/home_web/promotions/promotions.component.html
+++ b/src/app/components/home_web/promotions/promotions.component.html
@@ -1,18 +1,37 @@
 <div class="container">
     <div class="row">
-        <div class="col">
-            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSb04iGhumkx8nL8UhHXP2M7EPHDmWv9esfVdHasJpCyoGQuXA" alt="" width="180px" height="180px">
-        </div>
-    </div>
-    <div class="row">
-        <div class="col">
-            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSXaUi8COe6u30f7mDjCkj6whpYcx9gjI56lQe-xKVx4yTbNlOC" alt="" width="180px" height="180px">
-        </div>
-    </div>
-    <div class="row">
-        <div class="col">
-            <img src="https://www.guatemala.com/fotos/201604/13043320-1361669547192556-772478376935998181-n-e1461592006692.jpg" alt="" width="180px" height="180px">
-        </div>
-    </div>
+        <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <div class="col-2">
+                        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSb04iGhumkx8nL8UhHXP2M7EPHDmWv9esfVdHasJpCyoGQuXA" class="promo">
+                    </div>
+                    <div class="col-2">
+                        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSXaUi8COe6u30f7mDjCkj6whpYcx9gjI56lQe-xKVx4yTbNlOC" class="promo">
+                    </div>
+                    <div class="col-2">
+                        <img src="https://www.guatemala.com/fotos/201604/13043320-1361669547192556-772478376935998181-n-e1461592006692.jpg" class="promo">
+                    </div>
+                    <div class="col-2">
+                        <img src="http://www.ultranoticias.com.mx/media/k2/items/cache/8c8111504bf4e4b6fe5466afac8b05c3_XL.jpg" class="promo">
+                    </div>
+                </div>
 
+                <div class="carousel-item">
+                    <div class="col-2">
+                        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSb04iGhumkx8nL8UhHXP2M7EPHDmWv9esfVdHasJpCyoGQuXA" class="promo">
+                    </div>
+                    <div class="col-2">
+                        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSXaUi8COe6u30f7mDjCkj6whpYcx9gjI56lQe-xKVx4yTbNlOC" class="promo">
+                    </div>
+                    <div class="col-2">
+                        <img src="https://www.guatemala.com/fotos/201604/13043320-1361669547192556-772478376935998181-n-e1461592006692.jpg" class="promo">
+                    </div>
+                    <div class="col-2">
+                        <img src="http://www.ultranoticias.com.mx/media/k2/items/cache/8c8111504bf4e4b6fe5466afac8b05c3_XL.jpg" class="promo">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
