--- a/src/app/components/home_web/favorite-food/favorite-food.component.html
+++ b/src/app/components/home_web/favorite-food/favorite-food.component.html
@@ -1,14 +1,227 @@
 <div class="container">
     <div class="row">
-        <div class="col-2">
-            <div class="card border border-light text-center bg-light" style="width: 7rem;">
-                <div class="card-body">
-                    <section id="primero">
-                        <img src="https://recetatipica.com/wp-content/uploads/2019/02/sopa-de-mondongo.jpg" alt="plato favorito" class="card-img-top rounded-circle" width="100px" height="80px">
-                        <div class="" style="width: 50%">
-                            <a class="text-muted primero border-light card-link" style="background: yellow" href="#">Contenido del div</a>
+        <div class="col">
+            <h5 class="text-center titulo_favorite">FAVORITE FOOD</h5>
+            <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <div class="container">
+                            <div class="row">
+                                <div class="col-2">
+                                    <div class="card  border-light text-center" style="width: 7rem;">
+                                        <div class="card-body">
+                                            <section id="primero">
+                                                <a href="#">
+                                                    <img src="https://recetatipica.com/wp-content/uploads/2019/02/sopa-de-mondongo.jpg" alt="plato favorito" class="card-img-top rounded-circle" width="20px" height="60px">
+                                                </a>
+
+                                                <a class="text-muted text-center primero font-italic card-link" href="#">
+                                                    <p><small> Nombre del plato "Nombre del restaurant"</small></p>
+                                                </a>
+
+                                            </section>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="col-2">
+                                    <div class="card  border-light text-center" style="width: 7rem;">
+                                        <div class="card-body">
+                                            <section id="primero">
+                                                <a href="#">
+                                                    <img src="https://recetatipica.com/wp-content/uploads/2019/02/sopa-de-mondongo.jpg" alt="plato favorito" class="card-img-top rounded-circle" width="20px" height="60px">
+                                                </a>
+
+                                                <a class="text-muted text-center primero font-italic card-link" href="#">
+                                                    <p><small> Nombre del plato "Nombre del restaurant"</small></p>
+                                                </a>
+
+                                            </section>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="col-2">
+                                    <div class="card  border-light text-center" style="width: 7rem;">
+                                        <div class="card-body">
+                                            <section id="primero">
+                                                <a href="#">
+                                                    <img src="https://recetatipica.com/wp-content/uploads/2019/02/sopa-de-mondongo.jpg" alt="plato favorito" class="card-img-top rounded-circle" width="20px" height="60px">
+                                                </a>
+
+                                                <a class="text-muted text-center primero font-italic card-link" href="#">
+                                                    <p><small> Nombre del plato "Nombre del restaurant"</small></p>
+                                                </a>
+
+                                            </section>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="col-2">
+                                    <div class="card  border-light text-center" style="width: 7rem;">
+                                        <div class="card-body">
+                                            <section id="primero">
+                                                <a href="#">
+                                                    <img src="https://recetatipica.com/wp-content/uploads/2019/02/sopa-de-mondongo.jpg" alt="plato favorito" class="card-img-top rounded-circle" width="20px" height="60px">
+                                                </a>
+
+                                                <a class="text-muted text-center primero font-italic card-link" href="#">
+                                                    <p><small> Nombre del plato "Nombre del restaurant"</small></p>
+                                                </a>
+
+                                            </section>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="col-2">
+                                    <div class="card  border-light text-center" style="width: 7rem;">
+                                        <div class="card-body">
+                                            <section id="primero">
+                                                <a href="#">
+                                                    <img src="https://recetatipica.com/wp-content/uploads/2019/02/sopa-de-mondongo.jpg" alt="plato favorito" class="card-img-top rounded-circle" width="20px" height="60px">
+                                                </a>
+
+                                                <a class="text-muted text-center primero font-italic card-link" href="#">
+                                                    <p><small> Nombre del plato "Nombre del restaurant"</small></p>
+                                                </a>
+
+                                            </section>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="col-2">
+                                    <div class="card  border-light text-center" style="width: 7rem;">
+                                        <div class="card-body">
+                                            <section id="primero">
+                                                <a href="#">
+                                                    <img src="https://recetatipica.com/wp-content/uploads/2019/02/sopa-de-mondongo.jpg" alt="plato favorito" class="card-img-top rounded-circle" width="20px" height="60px">
+                                                </a>
+
+                                                <a class="text-muted text-center primero font-italic card-link" href="#">
+                                                    <p><small> Nombre del plato "Nombre del restaurant"</small></p>
+                                                </a>
+
+                                            </section>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
-                    </section>
+                    </div>
+                    <div class="carousel-item">
+
+
+                        <div class="container">
+                            <div class="row">
+                                <div class="col-2">
+                                    <div class="card  border-light text-center" style="width: 7rem;">
+                                        <div class="card-body">
+                                            <section id="primero">
+                                                <a href="#">
+                                                    <img src="https://recetatipica.com/wp-content/uploads/2019/02/sopa-de-mondongo.jpg" alt="plato favorito" class="card-img-top rounded-circle" width="20px" height="60px">
+                                                </a>
+
+                                                <a class="text-muted text-center primero font-italic card-link" href="#">
+                                                    <p><small> Nombre del plato "Nombre del restaurant"</small></p>
+                                                </a>
+
+                                            </section>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="col-2">
+                                    <div class="card  border-light text-center" style="width: 7rem;">
+                                        <div class="card-body">
+                                            <section id="primero">
+                                                <a href="#">
+                                                    <img src="https://recetatipica.com/wp-content/uploads/2019/02/sopa-de-mondongo.jpg" alt="plato favorito" class="card-img-top rounded-circle" width="20px" height="60px">
+                                                </a>
+
+                                                <a class="text-muted text-center primero font-italic card-link" href="#">
+                                                    <p><small> Nombre del plato "Nombre del restaurant"</small></p>
+                                                </a>
+
+                                            </section>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="col-2">
+                                    <div class="card  border-light text-center" style="width: 7rem;">
+                                        <div class="card-body">
+                                            <section id="primero">
+                                                <a href="#">
+                                                    <img src="https://recetatipica.com/wp-content/uploads/2019/02/sopa-de-mondongo.jpg" alt="plato favorito" class="card-img-top rounded-circle" width="20px" height="60px">
+                                                </a>
+
+                                                <a class="text-muted text-center primero font-italic card-link" href="#">
+                                                    <p><small> Nombre del plato "Nombre del restaurant"</small></p>
+                                                </a>
+
+                                            </section>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="col-2">
+                                    <div class="card  border-light text-center" style="width: 7rem;">
+                                        <div class="card-body">
+                                            <section id="primero">
+                                                <a href="#">
+                                                    <img src="https://recetatipica.com/wp-content/uploads/2019/02/sopa-de-mondongo.jpg" alt="plato favorito" class="card-img-top rounded-circle" width="20px" height="60px">
+                                                </a>
+
+                                                <a class="text-muted text-center primero font-italic card-link" href="#">
+                                                    <p><small> Nombre del plato "Nombre del restaurant"</small></p>
+                                                </a>
+
+                                            </section>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="col-2">
+                                    <div class="card  border-light text-center" style="width: 7rem;">
+                                        <div class="card-body">
+                                            <section id="primero">
+                                                <a href="#">
+                                                    <img src="https://recetatipica.com/wp-content/uploads/2019/02/sopa-de-mondongo.jpg" alt="plato favorito" class="card-img-top rounded-circle" width="20px" height="60px">
+                                                </a>
+
+                                                <a class="text-muted text-center primero font-italic card-link" href="#">
+                                                    <p><small> Nombre del plato "Nombre del restaurant"</small></p>
+                                                </a>
+
+                                            </section>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="col-2">
+                                    <div class="card  border-light text-center" style="width: 7rem;">
+                                        <div class="card-body">
+                                            <section id="primero">
+                                                <a href="#">
+                                                    <img src="https://recetatipica.com/wp-content/uploads/2019/02/sopa-de-mondongo.jpg" alt="plato favorito" class="card-img-top rounded-circle" width="20px" height="60px">
+                                                </a>
+
+                                                <a class="text-muted text-center primero font-italic card-link" href="#">
+                                                    <p><small> Nombre del plato "Nombre del restaurant"</small></p>
+                                                </a>
+
+                                            </section>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+
+                    </div>
                 </div>
             </div>
         </div>
