adicionar user-modal

--- a/src/app/components/dashboard-admin/dashboard-admin.component.html
+++ b/src/app/components/dashboard-admin/dashboard-admin.component.html
@@ -1,1 +1,16 @@
 <p>dashboard-admin works!</p>
+<div class="row">
+    <div class="col-lg-8 col-md-10 ml-auto mr-auto">
+        <div class="row">
+            <div class="col-md-4">
+                <button mat-raised-button class="btn btn-danger btn-block" (click)="showNotification('top','left')">Top Left</button>
+            </div>
+            <div class="col-md-4">
+                <button mat-raised-button class="btn btn-danger btn-block" (click)="showNotification('top','center')">Top Center</button>
+            </div>
+            <div class="col-md-4">
+                <button mat-raised-button class="btn btn-danger btn-block" (click)="showNotification('top','right')">Top Right</button>
+            </div>
+        </div>
+    </div>
+</div>
