--- a/src/app/components/user-list/user-list.component.html
+++ b/src/app/components/user-list/user-list.component.html
@@ -60,9 +60,7 @@
                                         <td>
                                             <!-- <a href="#" class="btn btn-info"><span><i class="fa fa-plus"></i></span></a> -->
                                             <a href="#" class="btn btn-info"><span><i class="fa fa-pen"></i></span></a>
-                                            <a routerLink="/admin/user-list" routerLinkActive="router-link-active"
-                                                class="btn btn-danger" (click)="onDeleteUser(user.id)"><span><i
-                                                        class="fa fa-trash"></i></span></a>
+                                            <button routerLinkActive="router-link-active" class="btn btn-danger" (click)="onDeleteUser(user.id)"><span><i class="fa fa-trash"></i></span></button>
                                         </td>
                                     </tr>
                                 </tbody>
