--- a/src/app/components/home_web/bodyweb/bodyweb.component.html
+++ b/src/app/components/home_web/bodyweb/bodyweb.component.html
@@ -20,15 +20,15 @@
                                 <div class="container">
                                     <div class="row">
                                         <div class="col-4">
-                                            <div class="card" style="width: 18rem;">
+                                            <div class="card fondo-card" style="width: 18rem;">
                                                 <a href="#"> <img class="card-img-top" src="http://www.hotelgloria.com.bo/imagenes/image-restaurant3.jpg" alt="Card image cap" width="300px" height="220px"></a>
                                                 <div class="card-body">
                                                     <p>
-                                                        <a href="#">
-                                                            <h5 class="card-title text-center text-gray">NOMBRE RESTAURANTE</h5>
+                                                        <a href="#" class="card-link">
+                                                            <h5 class="card-title text-center font-card-title">Nombre Restaurante</h5>
                                                         </a>
                                                     </p>
-                                                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                                    <p class="card-text font-card-body text-justify">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                                                 </div>
                                             </div>
                                         </div>
@@ -65,7 +65,7 @@
                                 <div class="container">
                                     <div class="row">
                                         <div class="col-4">
-                                            <div class="card" style="width: 18rem;">
+                                            <div class="card fondo-card" style="width: 18rem;">
                                                 <a href="#"> <img class="card-img-top" src="http://www.hotelgloria.com.bo/imagenes/image-restaurant3.jpg" alt="Card image cap" width="300px" height="220px"></a>
                                                 <div class="card-body">
                                                     <p>
