--- a/src/app/components/home_web/favorite-food/favorite-food.component.html
+++ b/src/app/components/home_web/favorite-food/favorite-food.component.html
@@ -1,7 +1,15 @@
 <div class="container">
     <div class="row">
         <div class="col">
-            <h5 class="text-center titulo_favorite">FAVORITE FOOD</h5>
+            <div>
+                <div class="row">
+                    <div class="col text-center">
+                        <h5 class="text-center titulo_favorite">Platos Favoritos</h5>
+                        <img src="/src/assets/img/separador.png " alt="" width="1000px" height="60px" class="">
+                    </div>
+                </div>
+            </div>
+
             <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
@@ -15,8 +23,8 @@
                                                     <img src="https://recetatipica.com/wp-content/uploads/2019/02/sopa-de-mondongo.jpg" alt="plato favorito" class="card-img-top rounded-circle" width="20px" height="60px">
                                                 </a>
 
-                                                <a class="text-muted text-center primero font-italic card-link" href="#">
-                                                    <p><small> Nombre del plato "Nombre del restaurant"</small></p>
+                                                <a class="text-muted text-center primero font-text card-link" href="#">
+                                                    <p><small> Nombre del plato</small></p>
                                                 </a>
 
                                             </section>
