--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,16 @@
 /* You can add global styles to this file, and also import other style files */
 
-@import url('https://fonts.googleapis.com/css?family=Pacifico|Vibes&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Courgette|Dancing+Script|Inconsolata|Lobster|Luckiest+Guy|Pacifico|Patrick+Hand|Satisfy|Vibes&display=swap|Vollkorn&display=swap');
+
+/* ESTAS SON LAS FUENTES IMPORTADAS 
+font-family: 'Dancing Script', cursive;
+font-family: 'Pacifico', cursive;
+font-family: 'Satisfy', cursive;
+font-family: 'Vibes', cursive;
+font-family: 'Inconsolata', monospace;
+font-family: 'Lobster', cursive;
+font-family: 'Courgette', cursive;
+font-family: 'Luckiest Guy', cursive;
+font-family: 'Patrick Hand', cursive;
+font-family: 'Vollkorn', serif;
+*/
