--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,7 +1,9 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light fondo">
     <div class="row">
         <div class="col-3">
-            <a class="navbar-brand logo" href="#">FOR HUNGER</a>
+            <a class="navbar-brand " href="#">
+                <h2 class="logo">For Hunger</h2>
+            </a>
         </div>
     </div>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
