component home-web assets correction

--- a/src/app/components/home_web/favorite-food/favorite-food.component.html
+++ b/src/app/components/home_web/favorite-food/favorite-food.component.html
@@ -5,7 +5,7 @@
                 <div class="row">
                     <div class="col text-center">
                         <h5 class="text-center titulo_favorite">Platos Favoritos</h5>
-                        <img src="/src/assets/img/separador.png " alt="" width="1000px" height="60px" class="">
+                        <img src="../../../../assets/img/separador.png" alt="" width="1000px" height="60px" class="">
                     </div>
                 </div>
             </div>
